# Redes-de-comunica-o-de-dados

Exercicio - Busca ativa/controller/: deviceController.cpp  deviceController.hpp
Exercicio - Busca ativa/model/: device.hpp
Exercicio - Busca ativa/view/: interface.hpp
Exercicio_Busca_ativa/: README.md  compiler.sh  main.cpp
Exercicio_Busca_ativa/client/: CMakeLists.txt  agent.cpp  agent.hpp  capturescreenclient.service  compiler.sh  run.sh
Exercicio_Busca_ativa/client/controller/: captureController.cpp  captureController.hpp  deviceController.cpp
Exercicio_Busca_ativa/client/data/: devices.db
Exercicio_Busca_ativa/controller/: deviceController.cpp  deviceController.hpp
Exercicio_Busca_ativa/model/: device.hpp
Exercicio_Busca_ativa/server/: CMakeLists.txt  agent.cpp  agent.hpp  main.cpp
Exercicio_Busca_ativa/server/controller/: captureController.cpp  captureController.hpp  deviceController.cpp  deviceController.hpp
Exercicio_Busca_ativa/server/data/: devices.db
Exercicio_Busca_ativa/server/view/: interface.cpp  interface.hpp
Exercicio_Busca_ativa/view/: interface.cpp  interface.hpp
Exercicio_espiao_mqtt/: README.md
Exercicio_espiao_mqtt/client/: main.cpp
Exercicio_espiao_mqtt/client/controller/: captureController.cpp  captureController.hpp  deviceController.hpp
Exercicio_espiao_mqtt/client/data/: devices.db
Exercicio_espiao_mqtt/server/: CMakeLists.txt  agent.cpp  agent.hpp  compiler.sh
Exercicio_espiao_mqtt/spy/: run.sh
Exercicio_espiao_mqtt/spy/controller/: captureController.cpp  captureController.hpp
Exercicio_espiao_mqtt/spy/data/: devices.db
Exercicio_espiao_mqtt/spy/model/: device.hpp
Exercicio_espiao_mqtt/spy/view/: interface.cpp  interface.hpp
Exercicio_esppiao_mqtt/client/: CMakeLists.txt
Exercicio_esppiao_mqtt/client/data/: devices.db
Exercicio_esppiao_mqtt/server/: agent.cpp
